@@ -1,16 +1,22 @@
 <script type="text/javascript" src="javascript/jquery/jcarousellite.js"></script>
 <script type="text/javascript">
+
+var vertical_set = {vertical};
+var visible_set = {visible};
+
 $(document).ready(function() {
-initSlides();
+initSlides(vertical_set, visible_set);
 });
 
-function initSlides()
+
+function initSlides(vert, vis)
 {
+
 $(".carousel-slides").jCarouselLite({
        btnNext: ".carousel .carousel-next",
        btnPrev: ".carousel .carousel-prev",
-       vertical: {vertical},
-       visible : {visible},
+       vertical: vert,
+       visible : vis,
        speed : 500
      });
 }
